--- a/company/index.html
+++ b/company/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>ini adalah header</header>
     <h1>Pt gono gini gana</h1>
+    <footer>ini adalah footer</footer>
   </body>
 </html>
