menambah penjelasan kontak

--- a/cobalagi/kontak.html
+++ b/cobalagi/kontak.html
@@ -10,5 +10,6 @@
     <header>ini adalah header</header>
     <h1>Hello world</h1>
     <footer>ini adalah</footer>
+    <form action="#">ini form gua</form>
   </body>
 </html>
